# gnutbot

./: ChangeLog.md  Gnutbot.cabal  NOTES.md  README.md  config.yml  plugin-notes.md  stack.yaml
src/: Gnut.hs
src/Gnut/: App.hs  Channel.hs  Config.hs  DynamicLoad.hs  Error.hs  EventNetwork.hs  IRC.hs  Interface.hs  Logger.hs  Message.hs  MessageRouter.hs  Module.hs  MsgCommands.hs  NickServ.hs  Permission.hs  Permissions.hs  Plugin.hs  Python.hs  Router.hs  Tui.hs  Types.hs  Util.hs  Xmpp.hs
src/Gnut/Command/: Tui.hs  Xmpp.hs
src/Gnut/Message/: Decoder.hs  Encoder.hs
src/Gnut/Modules/: Admin.hs  Echo.hs  Hello.hs
src/Gnut/Plugin/: ChanLog.hs  Error.hs  Helo.hs  Join.hs  MessageStore.hs  NumberConvert.hs  Perlis.hs  Ping.hs  Sed.hs  ServerHello.hs
