name:                Gnutbot

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MPL-2.0
license-file:        LICENSE

-- The package author(s).
author:              Gregor Reitzenstein

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          dequbed@paranoidlabs.org

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable gnut
    main-is: bin/Gnut.hs
    build-depends: base >= 4.9 && <4.10
                 , Gnutbot
                 , hslogger
                 , text
                 , containers
    default-language: Haskell2010

library
    -- Modules exported by the library.
    exposed-modules: Gnut
    -- Modules included in this library but not exported.
    other-modules: Gnut.Types
                 , Gnut.Config
                 , Gnut.Xmpp
                 , Gnut.Command.Xmpp
                 , Gnut.Tui
                 , Gnut.Command.Tui
                 , Gnut.Permission
                 , Gnut.Plugin
                 , Gnut.EventNetwork

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends: base >= 4.9 && <4.10
                 , hslogger
                 , pontarius-xmpp >= 0.5.4
                 , network
                 , text
                 , reactive-banana
                 , data-default
                 , yaml
                 , lens
                 , lens-aeson
                 , tls >= 1.3.9
                 , transformers
                 , containers
                 , unordered-containers

    -- Directories containing source files.
    hs-source-dirs:      src

    -- Base language which the package is written in.
    default-language:    Haskell2010
