name:                Gnutbot

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MPL-2.0
license-file:        LICENSE

-- The package author(s).
author:              Gregor Reitzenstein

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          dequbed@paranoidlabs.org

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=2.0

executable gnut
    main-is: Main.hs
    hs-source-dirs: bin
    build-depends: base >= 4.10 && <4.12
                 , Gnutbot
                 , hslogger
                 , text
                 , containers
                 , xdg-basedir
                 , unix
                 , directory
                 , filepath
    default-language: Haskell2010
    default-extensions: OverloadedStrings

library
    -- Modules exported by the library.
    exposed-modules: Gnut
    -- Modules included in this library but not exported.
    other-modules: Gnut.Channel
                 , Gnut.Config
                 , Gnut.Xmpp
                 , Gnut.Types
                 , Gnut.Permissions
                 , Gnut.Interface
                 , Gnut.Python
                 , Gnut.Modules.Echo
                 , Gnut.Modules.Hello
                 , Gnut.Modules.Admin

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends: base >= 4.10 && <4.12
                 , hslogger
                 , network
                 , text
                 , reactive-banana
                 , data-default
                 , yaml
                 , aeson
                 , lens
                 , lens-aeson
                 , tls >= 1.3.9
                 , transformers
                 , containers
                 , unordered-containers
                 , pontarius-xmpp
                 , cpython >= 3.5

    -- Directories containing source files.
    hs-source-dirs:      src

    -- Base language which the package is written in.
    default-language:    Haskell2010
